# cupystorm

./: CLAUDE.md  README.md  macos.spec  make_dmg.sh  pyproject.toml
cupystorm/: turbo_colors.py  turbo_gui.py  turbo_logic.py  turbo_main.py  turbo_simulator.py  turbo_simulator_mode.py  turbo_wrapper.py
interact/: turbo_colors.py  turbo_gui.py  turbo_logic.py  turbo_main.py  turbo_main_circle.py  turbo_main_mini.py  turbo_main_random.py  turbo_simulator.py  turbo_wrapper.py
web/: .gitignore  README.md  app.js  deploy.sh  index.html  install-pyodide.sh  styles.css  sync-sources.sh  test_node.mjs  web_sim.py
web/py/cupystorm/: turbo_simulator.py
