[project]
name = "mannetroll-cupystorm"
version = "0.1.2"
description = "2D Turbulence (SciPy + CuPy)"
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = { file = "LICENSE" }

authors = [
  { name = "Torbjörn Sjögren" }
]

dependencies = [
    "numpy>=2.3.5",
    "numba>=0.63.1,<1",
    "pillow>=12.0.0",
    "scipy>=1.16.3",
    "PySide6>=6.6",
]

# Optional GPU extra
[project.optional-dependencies]
cuda = [
  "cupy-cuda13x>=13.6.0; sys_platform != 'darwin'",
  "fastrlock>=0.8; sys_platform != 'darwin'",
]


[project.scripts]
turbulence = "cupystorm.turbo_main:main"
sim = "cupystorm.turbo_simulator:main"
wrapper = "cupystorm.turbo_wrapper:main"

# Package discovery
[tool.setuptools.packages.find]
include = ["cupystorm"]

[tool.setuptools.package-data]
cupystorm = ["*.icns"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "build>=1.3.0",
    "twine>=6.2.0",
]
